Fixes spacing at top of page so that the top of the blog image aligns with the bottom of the header.

--- a/src/sass/partials/_blog_preload.scss
+++ b/src/sass/partials/_blog_preload.scss
@@ -20,7 +20,7 @@
   			padding-top:0px;
   		}
   		@media screen and (max-width:em(560)){
-  			margin-top:rem(116);
+  			margin-top:rem(95);
   		}
   		.blog-entry	{ background-image:none;}
   }
